--- a/popup.html
+++ b/popup.html
@@ -556,7 +556,7 @@
                     <div id="filterSearch" class="popupSubTabDisplay flex directionColumn flex1 hide">
                         <div class="toggler">
                             <div class="togglerContent alignCenter flex">
-                                <div class="flex1 filterSearch">
+                                <div class="flex1 filterSearch flex alignCenter">
                                     Filter Search Enabled
                                 </div>
                                 <div class="toggleWrapper">
@@ -566,7 +566,7 @@
                             </div>
                             <div class="toggleContent" id="filterSearchOption">
                                 <div class="flex toggleContent_inner">
-                                    <div class="flex1 filterSearch">
+                                    <div class="flex1 filterSearch flex alignCenter">
                                         Block Risky Sites
                                     </div>
                                     <div class="toggleWrapper">
@@ -575,7 +575,7 @@
                                     </div>
                                 </div>
                                 <div class="flex toggleContent_inner">
-                                    <div class="flex1 filterSearch">
+                                    <div class="flex1 filterSearch flex alignCente">
                                         Block Trackers
                                     </div>
                                     <div class="toggleWrapper">
@@ -588,7 +588,7 @@
 
                         <div class="toggler">
                             <div class="togglerContent alignCenter flex">
-                                <div class="flex1 filterSearch">
+                                <div class="flex1 filterSearch flex alignCenter">
                                     Block Website
                                 </div>
                                 <div class="toggleWrapper">
