--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/popup.css">
 </head>
-<body style="background-color: aqua;">
+<body>
     <main class="popupWrap flex directionColumn">
         <!-- TABS MAIN -->
         <div class="popupWrap__tabWrap">
