--- a/popup.html
+++ b/popup.html
@@ -559,10 +559,10 @@
                             <div class="flex1 filterSearch flex alignCenter">
                                 Filter Search Enabled
                             </div>
-                            <div class="toggleWrapper">
+                            <!-- <div class="toggleWrapper">
                                 <input checked type="checkbox" name="filterSearchToggler" filter-toggle-option="filterSearchOption" class="mobileToggle" id="filterSearchToggler">
                                 <label for="filterSearchToggler"></label>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="toggleContent" id="filterSearchOption">
                             <div class="flex toggleContent_inner">
@@ -579,7 +579,7 @@
                                     Block Trackers
                                 </div>
                                 <div class="toggleWrapper">
-                                    <input checked type="checkbox" name="BlockTrackers" class="mobileToggle" id="BlockTrackers">
+                                    <input checked type="checkbox" name="BlockTrackers" class="mobileToggle" id="blockTrackers">
                                     <label for="BlockTrackers"></label>
                                 </div>
                             </div>
