--- a/popup.html
+++ b/popup.html
@@ -580,7 +580,7 @@
                                 </div>
                                 <div class="toggleWrapper">
                                     <input checked type="checkbox" name="BlockTrackers" class="mobileToggle" id="blockTrackers">
-                                    <label for="BlockTrackers"></label>
+                                    <label for="blockTrackers"></label>
                                 </div>
                             </div>
                         </div>
