--- a/popup.html
+++ b/popup.html
@@ -396,7 +396,7 @@
                         </ul>
 
                     </div>
-                    <div p-threat="disable" style="display: none;" class="topMainDisable flex1 flex directionColumn">
+                    <div p-threat="disable" class="hide topMainDisable flex1 flex directionColumn">
                         <div class="flex1 topMainDisable_inner">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="72" height="61" viewBox="0 0 72 61">
@@ -460,7 +460,7 @@
                             Threat Scanning <span class="threatActions">Enabled</span>
                         </div>
                         <div class="toggleWrapper">
-                            <input type="checkbox" name="threatToggle" class="mobileToggle" id="threatDetectionToggle">
+                            <input type="checkbox" name="threatToggle" class="mobileToggle" checked id="threatDetectionToggle">
                             <label for="threatDetectionToggle"></label>
                         </div>
                     </div>
@@ -864,6 +864,7 @@
 <script src="./scripts/constants.js"></script>
 <script src="./scripts/util.js"></script>
 <script src="./scripts/popup.js"></script>
+<script src="./scripts/threats.js"></script>
 <script src="./scripts/browsingData.js"></script>
 <script src="./scripts/filterSearch.js"></script>
 <script type="text/javascript" src="popup.js"></script>
