fixing stat and adding threat eventhandler

--- a/popup.html
+++ b/popup.html
@@ -160,7 +160,7 @@
                             <!-- Banner -->
 
                             <ul class="threatList flex flex1">
-                                <li>
+                                <li threat-name="malware">
                                     <div class="threatDetails flex directionColumn">
                                         <div class="numberOfThreats">0</div>
                                         <div class="threatLabel">
@@ -210,7 +210,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li>
+                                <li threat-name="adware">
                                     <div class="threatDetails flex directionColumn">
                                         <div class="numberOfThreats">0</div>
                                         <div class="threatLabel">
@@ -286,7 +286,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li>
+                                <li threat-name="se">
                                     <div class="threatDetails flex directionColumn">
                                         <div class="numberOfThreats">0</div>
                                         <div class="threatLabel">
@@ -370,7 +370,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li>
+                                <li threat-name="others">
                                     <div class="threatDetails flex directionColumn">
                                         <div class="numberOfThreats">0</div>
                                         <div class="threatLabel">
@@ -823,7 +823,7 @@
                                     </select>
                                     <select id="statisticsDayWise" class="flex1">
                                         <option value="7">Last 7 days</option>
-                                        <option value="31">Last 4 weeks</option>
+                                        <option value="28">Last 4 weeks</option>
                                     </select>
                                 </div>
                                 <div id="statisticsViewChart"></div>
