adding count in stat

--- a/popup.html
+++ b/popup.html
@@ -834,7 +834,7 @@
                             <div class="whiteContainer totalDataViewContainer">
                                 <div class="totalDataViewHeader flex alignCenter">
                                     <span>Total</span>
-                                    <span class="viewDataNumber">70</span>
+                                    <span stat-desc="total-count" class="viewDataNumber">70</span>
                                 </div>
                                 <div class="totalDataViewBody">
                                     <ul>
@@ -859,7 +859,7 @@
                                                 <span class="totalDataViewBodyText flex1">
                                                     Total sites blocked
                                                 </span>
-                                                <span class="viewDataNumber green">
+                                                <span stat-desc="risky" class="viewDataNumber green">
                                                     23
                                                 </span>
                                             </div>
@@ -886,7 +886,7 @@
                                                 <span class="totalDataViewBodyText flex1">
                                                     Total trackers blocked
                                                 </span>
-                                                <span class="viewDataNumber blue">
+                                                <span stat-desc="track" class="viewDataNumber blue">
                                                     47
                                                 </span>
                                             </div>
