approach 1 change url

--- a/blockSite.html
+++ b/blockSite.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Blocked risky Site</h1>
+<h1>This site has been blocked</h1>
+<!--<script>-->
+<!--    var url = new URL(url_string);-->
+<!--    var blockedUrl = url.searchParams.get("blockedurl");-->
+<!--    document.body.innerHTML=blockedUrl +" has been blocked";-->
+<!--    console.log(c);-->
+<!--</script>-->
 </body>
 </html>
