--- a/blockSite.html
+++ b/blockSite.html
@@ -5,12 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<h1>This site has been blocked</h1>
-<!--<script>-->
-<!--    var url = new URL(url_string);-->
-<!--    var blockedUrl = url.searchParams.get("blockedurl");-->
-<!--    document.body.innerHTML=blockedUrl +" has been blocked";-->
-<!--    console.log(c);-->
-<!--</script>-->
+<script type="text/javascript" src="blockSiteScript.js"></script>
 </body>
 </html>
