--- a/riskySite.html
+++ b/riskySite.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<h1>block website</h1>
+<script type="text/javascript" src="riskySiteScript.js"></script>
 </body>
 </html>
